校验OK：使用spring的form标签

--- a/jiulou/jiulou-gen/web/index.html
+++ b/jiulou/jiulou-gen/web/index.html
@@ -6,9 +6,10 @@
 </head>
 <body>
 <form id="frmSql" name="frmSql" method="post" action="gen.jsp">
-1 每一个列只能占一行
+* VO sqlmapper controller 
+1 每一个列只能占一行，注释中不允许包含
 Create table sql:<br>
-<textarea id="sqlCreate" name="sqlCreate" rows="20" cols="90">
+<textarea id="sqlCreate" name="sqlCreate" rows="20" cols="130">
 </textarea><br>
 <input type="submit" />
 </form>
